styles.css
@import url('https://fonts.googleapis.com/css2?family=Fraunces:wght@500;700&family=Montserrat:wght@500;700&display=swap');

body {
    background-color: hsl(30, 38%, 92%);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.card {
    display: flex;
    height: 450px;
    overflow: hidden;
    border-radius: 10px;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}

.main-img {
    width: 300px;
}

.mobile-img {
    display: none;
}

.text-container {
    background-color: white;
    width: 300px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.perfume {
    font-family: "Montserrat";
    font-size: 12px;
    letter-spacing: 5px;
    margin-left: 33px;
    margin-top: 34px;
    color: hsl(228, 12%, 48%);
}

h1 {
    font-family: "Fraunces";
    margin-left: 33px;
    margin-right: 33px;
    font-weight: 700;
    line-height: 30px;
    color: hsl(212, 21%, 14%);
}

p {
    font-family: "Montserrat";
    font-weight: 500;
    line-height: 23px;
    margin-left: 33px;
    margin-right: 33px;
    font-size: 14px;
    color: hsl(228, 12%, 48%);
}

.prices {
    display: flex;
    align-items: center;
}

.new-price {
    color: hsl(158, 36%, 37%);
    margin-right: 0;
}

.old-price {
    font-family: "Montserrat";
    font-weight: 500;
    margin-left: 20px;
    color: hsl(228, 12%, 48%);
    font-size: 13px;
}

button {
    width: 235px;
    height: 47px;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    margin-bottom: 34px;
    background-color: hsl(158, 36%, 37%);
    border-radius: 7px;
    font-family: "Montserrat";
    font-weight: 700;
    color: white;
    border: none;
}

.cart {
    margin-right: 12px;
}

button:hover {
    background-color: hsl(167, 44%, 12%);
    cursor: pointer;
}

button:focus {
    background-color: hsl(167, 44%, 12%);
}


.attribution { 
    font-size: 11px; text-align: center; 
    position: absolute;
    text-align: center;
    bottom: 20px;
    width: 100%;
}
.attribution a { 
    color: hsl(228, 45%, 44%); 
}

@media (max-width: 610px) {
    .card {
        flex-direction: column;
        justify-content: space-around;
        height: 610px;
    }

    .main-img {
        display: none;
    }

    .mobile-img {
        display: flex;
        width: 345px;
        height: 240px;
    }

    .text-container {
        width: 345px;
        height: 370px;
    }

    h1 {
        font-size: 30px;
        /* margin-top: -3px; */
    }

    p {
        font-size: 14px;
        margin-top: -5px;
    }

    button {
        margin-bottom: 25px;
        width: 295px;
    }

    .prices {
        margin-top: -20px;
    }
   
}

